--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/themes/hugo-test-theme"]
 	path = src/themes/hugo-test-theme
 	url = git@github.com:sinicide/hugo-test-theme.git
+[submodule "src/content"]
+	path = src/content
+	url = git@github.com:sinicide/hugo-test-content.git
