Swapped to the hell-bulma theme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,4 +10,4 @@ services:
     volumes:
       - ./:/workdir
       - ../hugo-test-content:/content
-      - ../huynguyen-hugo-theme:/themes/huynguyen-hugo-theme
+      - ../hugo-theme-hello-bulma:/themes/hugo-theme-hello-bulma
