--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "src/themes/hugo-theme-hello-bulma"]
 	path = src/themes/hugo-theme-hello-bulma
     url = https://github.com/sinicide/hugo-theme-hello-bulma.git
-	branch = bulma-mods
+    update = merge
 [submodule "src/content"]
 	path = src/content
 	url = https://github.com/sinicide/hugo-test-content.git
